message LogEntry {
  int32 term = 1;
  bytes command = 2;
}

message AppendEntries {
  int32 term = 1;           // leader’s term
  int32 leaderId = 2;       // so follower can redirect clients
  int32 prevLogIndex = 3;   // index of log entry immediately preceding new ones
  int32 prevLogTerm = 4;    // term of prevLogIndex entry
  repeated LogEntry entries = 5; // log entries to store (empty for heartbeat)
  int32 leaderCommit = 6;   // leader’s commitIndex
}